--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "test": "weathertest"
   },
-    "dependencies": {
-    "pg": "4.x",
-    "ejs": "^2.3.1",
+  "dependencies": {
     "express": "~4.9.x",
-    "cool-ascii-faces": "~1.3.x"
+    "body-parser": "~1.13.2"
   },
   "engines": {
     "node": "0.12.2"
